# free-code

./: .claudeignore  .clignore  .gitattributes  .gitignore  .graphifyignore  .mcp.json  AGENTS.md  CLAUDE.md  COPILOT_API_OPTIMIZATION.md  COPILOT_API_OPTIMIZATION_IMPLEMENTATION.md  Codex-Sys-Prompt.md  FEATURES.md  GUI-Context.md  GUI.md  HOW-TO-TEST-LIVE-DEPENDENCY-GRAPH.md  NexAscent.md  OBSERVABILITY.md  PHASE-1-COMPLETE.md  Phase 2 Plan.md  README.md  SKILL.md  changes.md  install.ps1  install.sh  journey-into-free-code-working.md  mempalace.yaml  package-lock.json  package.json  rtk-harness-guide.md  test-live-dependency-graph.ts  tsconfig.json
.claude/: settings.json
F:\code\free-code/: session_1775536439626_twvgwqzgl.state.json
docs/: branding-sanitization-exceptions.md  live-dependency-graph-design.md  live-dependency-graph-testing.md  phase-1-implementation-status.md
gui/: package-lock.json  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
mcp-servers/: 4abd1865-e764-4666-98dd-351317abded7.state.json  README.md  mcp.config.claude-desktop.example.json  mcp.config.codex.example.json  package-lock.json  package.json
memory/: MEMORY.md  bug_commitstandard-missing.md  deferred-tool-stop-sequence-debug.md  feedback-claude-md-code-summarizer.md  feedback-commands-untrusted.md  feedback-devbar-ant-feature-flags.md  feedback-slash-commands.md  feedback-stop-hook.md  feedback_build_checks.md  feedback_saver-hooks.md  mcp-code-summarizer-working.md  mcp-config-location.md  mcp-install-script.md  mcp-server-setup.md  (+9 more)
(+557 files in other folders)
