[package]
name = "free-code-gui"
version = "0.1.0"
description = "Free-Code GUI - Cross-platform GUI for free-code CLI"
authors = ["free-code team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
